solc_mutator_ossfuzz_seed_corpus/test_sol/test_a4877207f3e19e72558c05ec42ea8521c011fa14e59481cb6a6a0a202a966747_8b61e939004dbb680f47bdf22be3f1ff78e132e8_sol.sol
==== Source:  ====

==== Source: su0.sol ====
contract C0 {
  int96 s0;
  bytes23 s1;
  constructor(int96 i0,bytes23 i1)  {

  }
}
function f0(bytes memory i0,int112 i1,uint120 i2)  returns(uint88 o0,bytes29 o1,uint248 o2)
{ }

==== Source: su1.sol ====
import "su0.sol";
function f1(uint88 i0,uint152 i1,uint16 i2)  returns(uint200 o0,int48 o1,uint152 o2)
{

  while ((((((type(uint48).min & (((((uint48((abi.decode(bytes.concat(abi.decode(address(0x775Fa7c024c10A7E0B60D829f4eEC7d8BcBF5b45).code, (bytes32)), (((abi.decode("5a1d8c66066919c5199df29e8400ec6d1f13de895c7aeed6530139d8f78ce4afb7c62a691fa6ca24f7bbbdb3be202a", (bytes11)) | bytes11(0x12c4f85c0ceb497c421c2d)) & (bytes11(0x4d24c795bf198b1d2f9bdf) | ((abi.decode("f7349a86835069466af26e0952119a215f92b8796d828e4eaab3ff14ec997bc8012ed6", (bytes11)) ^ abi.decode(abi.decode("0198962d3555cec9eb", (bytes)), (bytes11))) | bytes11(0x9620cfb5cb681848b80f7a)))) & bytes11(0xf07e3dcf6e36197331d5f8)), bytes19(0x24ba0a26f5be022566d96c183e677d16f6e5e9)), (uint48)) / uint48(253476964242358))) >> uint48(15441096276785)) ** uint48(44240749545792)) >> uint48(137208238773159)) | uint48(6578924081983)) - uint48(62364768903753))) << uint48(255125646302319)) | uint48(12185492101027)) ^ uint48(14318993823857)) >= uint48(77569079800765)))
  {
  }



}
function f2(bytes27 i0,int208 i1)  returns(bytes28 o0)
{
  int192 l0 = (int192(-1855271000582700321903645586414731758513387933379994832886) - int192((abi.decode("d9e16373367d4f04fab5a0bbba67ef4d363c4179676fa7147ffdc443c9b943befad8a4c4", (int192)) / int192((int192(1947140881837628065020876584226405550394829939972411638268) / (-(((int192(1781709484829401471210206848375935242430522415218824144192) | int192(-22989261378387535014018850544393283193157736642674979465)) & (int192((int192(-2536901859639258975590045153432716433250084487934969410228) / (int192(((((-(((type(int192).max * (-((abi.decode("216173b51f49", (int192)) + int192(186189067083638922917814491474883623066061156321973183208))) ^ int192(1817582569112352358659638375107595586712914432066599061953))) & int192(-3138167448543183860586447168198899754383781020675077443379))) + int192(1753154720983139648202766586837917830147676543871206622706)) | int192(-503877824283785078199683573527546232875872588088626589456)) % int192(913769169371618687720392433162811093290247867203467816294)) / int192(2092842587994504143938829941303573365705584946363505840126))) & int192(-180708504134156787221671142613551065915544013061110945723)))) + int192(1217823609130843138951270183701083485985003751497910868464)))) + int192(-2528783376162885356728344215098924688706711336372797474694)))))));


  int184 l1 = int184(-7528514061861135265320998387646951158559354283712838802);
}

==== Source: su2.sol ====
import "su0.sol";
import "su1.sol";
function f3(int96 i0)  returns(int24 o0,int16 o1,bytes7 o2,bytes memory o3)
{


}
function f4(uint32 i0,bytes3 i1,bytes31 i2)  returns(int40 o0,int248 o1)
{
}
contract C1 is C0 {
  int40 s2;
  int176 s3;
  int64 s4;
  constructor(int96 i0,bytes23 i1,int96 i2,bytes23 i3,int40 i4,int176 i5,int64 i6) C0((--i2 * i2--), i1, (((i0-- ^ i0++) ^ ((s0++ + (-(s0--) * ((abi.decode(ecrecover(bytes32(0xdd47989a68bf539ffd8f5a6ce795ae32902e03bcff4f752e0c38482b29b568b5), abi.decode(abi.decode("3d053bf0f51e0b2ed2cfcaf6", (bytes)), (uint8)), keccak256(abi.decode("8a72c82a7c154b01879515255532", (bytes))), bytes32(0xd0459b7b5c2903782a36f949b971d0d1e0d54f94ab64dee691df82ceabae0026)).code, (int96)) - (i2-- & (int96(18835828567991312191801347075) ^ int96(-2421031800794707223197131492)))) ^ int96(-26847490675872255236655209235)))) & int96(-24253450698050151654742731675))) - int96(24217627913914681067235456132)), bytes23(0x531ad4d97fc93c93f4469c4ef4df7e9e41c04acd5ac2b3), int40(67743137913), int176(-17730703214607950907328668795551091566493904489378721), int64(-1660794405961570935))
  {

  }
  function f5(int216 i0) external returns(int96 o0)
  { }
}
pragma solidity >= 0.0.0;
// ----
// TypeError 2973: (su2.sol:335-1108): Wrong argument count for modifier invocation: 7 arguments given but expected 2.
